--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "knex": "^0.9.0",
     "lodash": "^4.0.1",
     "moment": "^2.11.1",
+    "moment-range": "^2.1.0",
     "mysql": "^2.10.2",
     "nunjucks": "^2.3.0",
     "popsicle": "^3.0.3",
