--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment-range": "^2.1.0",
     "mysql": "^2.10.2",
     "nunjucks": "^2.3.0",
+    "nunjucksify": "^0.2.3",
     "popsicle": "^3.0.3",
     "vision": "^4.0.1"
   },
