Cleaner code on backend and frontend
- server.route in one function
- marionette ui on login, register and reservationDetails views

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.11.1",
     "moment-range": "^2.1.0",
     "mysql": "^2.10.2",
+    "nodemailer": "^2.1.0",
     "nunjucks": "^2.3.0",
     "nunjucksify": "^0.2.3",
     "popsicle": "^3.0.3",
