--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hapi": "^12.1.0",
     "hapi-auth-cookie": "^6.0.0",
     "inert": "^3.2.0",
+    "is-email": "^0.1.1",
     "jquery": "^2.2.0",
     "knex": "^0.9.0",
     "lodash": "^4.0.1",
@@ -35,6 +36,7 @@
     "nunjucks": "^2.3.0",
     "nunjucksify": "^0.2.3",
     "popsicle": "^3.0.3",
+    "string-template": "^1.0.0",
     "vision": "^4.0.1"
   },
   "devDependencies": {
