Changes in register logic and calendarView
- verified and non-verified users in the same table User
- new listening module: cron
- login and register on frontend extend validationView with a common method validate
- calendarView renders collection and then child
- login and register templates changed
- login and register styles updated

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bookshelf": "^0.9.1",
     "bootstrap-sass": "^3.3.6",
     "bootswatch": "^3.3.6",
+    "cron": "^1.1.0",
     "fullcalendar": "^2.6.0",
     "got": "^6.1.1",
     "handlebars": "^4.0.5",
