--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "nunjucks": "nunjucks"
   },
   "browserify": {
-    "transform": [ "browserify-shim" ]
+    "transform": [
+      "browserify-shim"
+    ]
   },
   "author": "Ivan Baković",
   "license": "ISC",
@@ -31,7 +33,6 @@
     "hapi": "^12.1.0",
     "hapi-auth-cookie": "^6.0.0",
     "inert": "^3.2.0",
-    "iron": "^4.0.0",
     "is-email": "^0.1.1",
     "jquery": "^2.2.0",
     "knex": "^0.9.0",
