--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "jquery": "^2.2.0",
     "knex": "^0.9.0",
     "lodash": "^4.0.1",
+    "minilog": "^3.0.0",
     "moment": "^2.11.1",
     "moment-range": "^2.1.0",
     "mysql": "^2.10.2",
     "nodemailer": "^2.1.0",
+    "noty": "^2.3.8",
     "nunjucks": "^2.3.0",
     "nunjucksify": "^0.2.3",
     "popsicle": "^3.0.3",
@@ -53,9 +55,11 @@
     "browserify-handlebars": "^1.0.0",
     "browserify-shim": "^3.8.12",
     "gulp": "^3.9.0",
+    "gulp-jshint": "^2.0.0",
     "gulp-sass": "^2.1.1",
     "hapi-sass": "^2.0.0",
     "install": "^0.4.1",
+    "jshint": "^2.9.1",
     "node-sass": "^3.4.2",
     "npm": "^3.5.3"
   }
