--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nunjucksify": "^0.2.3",
     "popsicle": "^3.0.3",
     "q": "^1.4.1",
+    "randomstring": "^1.1.4",
     "string-template": "^1.0.0",
     "vision": "^4.0.1"
   },
