--- a/package.json
+++ b/package.json
@@ -9,14 +9,6 @@
     "watchify": "watchify -t browserify-handlebars ./app/src/js/index.js -o ./app/dist/index.js -v",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "browserify-shim": {
-    "nunjucks": "nunjucks"
-  },
-  "browserify": {
-    "transform": [
-      "browserify-shim"
-    ]
-  },
   "author": "Ivan Baković",
   "license": "ISC",
   "dependencies": {
@@ -25,11 +17,8 @@
     "bcryptjs": "^2.3.0",
     "bookshelf": "^0.9.1",
     "bootstrap-sass": "^3.3.6",
-    "bootswatch": "^3.3.6",
     "cron": "^1.1.0",
     "fullcalendar": "^2.6.0",
-    "got": "^6.1.1",
-    "handlebars": "^4.0.5",
     "hapi": "^12.1.0",
     "hapi-auth-cookie": "^6.0.0",
     "inert": "^3.2.0",
@@ -39,12 +28,10 @@
     "lodash": "^4.0.1",
     "minilog": "^3.0.0",
     "moment": "^2.11.1",
-    "moment-range": "^2.1.0",
     "mysql": "^2.10.2",
     "nodemailer": "^2.1.0",
     "noty": "^2.3.8",
-    "nunjucks": "^2.3.0",
-    "nunjucksify": "^0.2.3",
+    "path": "^0.12.7",
     "popsicle": "^3.0.3",
     "q": "^1.4.1",
     "randomstring": "^1.1.4",
@@ -54,10 +41,10 @@
   "devDependencies": {
     "browserify": "^13.0.0",
     "browserify-handlebars": "^1.0.0",
-    "browserify-shim": "^3.8.12",
     "gulp": "^3.9.0",
     "gulp-jshint": "^2.0.0",
     "gulp-sass": "^2.1.1",
+    "handlebars": "^4.0.5",
     "hapi-sass": "^2.0.0",
     "install": "^0.4.1",
     "jshint": "^2.9.1",
