--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "fullcalendar": "^2.6.0",
     "hapi": "^12.1.0",
     "hapi-auth-cookie": "^6.0.0",
+    "hapi-auth-jwt": "^4.0.0",
     "inert": "^3.2.0",
     "is-email": "^0.1.1",
     "jquery": "^2.2.0",
+    "jsonwebtoken": "^5.7.0",
     "knex": "^0.9.0",
     "lodash": "^4.0.1",
     "minilog": "^3.0.0",
